--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
             "error",
             "always"
         ],
-        "no-console": "off"
+        "no-console": "off",
+        "no-undef": "off"
     }
 }
